# JangLabs-SwitchTail

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.planning/: .continue-here.md  HANDOFF.json  INGEST-CONFLICTS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: ring-targets-wrong-line.md  seat-swap-not-positional.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: direction-report-2026-06-switchtail-docs.json
.planning/milestones/: v0.1-REQUIREMENTS.md  v0.1-ROADMAP.md
.planning/notes/: v0.2-composing-the-exchange.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: agent-session-wiring.md
crates/switchtail-core/: Cargo.toml
crates/switchtail-core/src/: deck.rs  (+9 more)
crates/switchtail-plugin/: Cargo.toml
docs/: DESIGN.md  direction-report-2026-06.md  legacy-learnings.md  zellij-api-notes.md
kitty/: cockpit.conf  cockpit_bounce.py  cockpit_monitor.conf  cockpit_monitor.py  cockpit_park.py  deck.conf  hold.conf  hold.py  keys.conf  state.conf  state.py  swap.py  switchtail-lab.zsh  tail.conf  tail.py
plasmoid/org.switchtail.board/: metadata.json
systemd/: switchtail-sessions.path  switchtail-sessions.service
tests/: cockpit-monitor-test.py  e2e.sh  hold-live-test.sh  park-live-test.sh  park_q.py  run-all.sh  stail-kitten-test.py  stail-test-1.sh  stail-test-2.sh  stail-test-3.sh  stail-test-4.sh  stail-test-5.sh  stail-test-6.sh  state-test.py  tail-test.py
tools/: dev.sh
(+31 files in other folders)
